[gd_scene load_steps=23 format=3 uid="uid://cwvogqiwgp5h0"]

[ext_resource type="Script" path="res://game-components/card/card.gd" id="1_e54oh"]
[ext_resource type="Shader" path="res://game-components/card/crop.gdshader" id="2_craub"]
[ext_resource type="Texture2D" uid="uid://d3t3wxf1l68qy" path="res://game-components/card/bar/leftBar.png" id="5_o1kkw"]
[ext_resource type="Theme" uid="uid://pouk3bvjvx18" path="res://game-components/card/card.tres" id="6_5svqc"]
[ext_resource type="Texture2D" uid="uid://jejiwqfyc63o" path="res://game-components/card/bar_icon/l.png" id="6_efj20"]
[ext_resource type="Texture2D" uid="uid://cn64cflas2jp4" path="res://game-components/card/bar/middleBar.png" id="6_msicd"]
[ext_resource type="Texture2D" uid="uid://dailkunjfuc1y" path="res://game-components/card/bar/rightBar.png" id="7_megja"]
[ext_resource type="Texture2D" uid="uid://b0xhpvr7f3ceg" path="res://game-components/card/bar_effct/bar_left_effect.png" id="7_rp7mf"]
[ext_resource type="Texture2D" uid="uid://sq1ngwbe2iyd" path="res://game-components/card/bar_effct/bar_right_effect.png" id="8_36o1h"]
[ext_resource type="Texture2D" uid="uid://dk3q62ky3wsx4" path="res://game-components/card/bar_icon/m.png" id="8_fxf3n"]
[ext_resource type="FontFile" uid="uid://cjs2giljtia4" path="res://fonts/vinque.rg-regular.otf" id="8_uxrkt"]
[ext_resource type="Texture2D" uid="uid://db58v6h5irgr5" path="res://game-components/card/bar_effct/bar_top_effect.png" id="9_n0uju"]
[ext_resource type="Texture2D" uid="uid://cp3exnw8vnvjm" path="res://game-components/card/bar_effct/bar_bottom_effect.png" id="10_8c53s"]
[ext_resource type="Texture2D" uid="uid://b1npak41fcitl" path="res://game-components/card/bar_icon/r.png" id="10_d4xvl"]
[ext_resource type="Texture2D" uid="uid://bklh12fra4bxi" path="res://game-components/card/icons/Wildcardz.png" id="11_khnek"]
[ext_resource type="Texture2D" uid="uid://l2dbt0pstjgb" path="res://game-components/card/icons/Lad.png" id="12_3fpi6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qka3k"]
shader = ExtResource("2_craub")
shader_parameter/crop_left = 0.01
shader_parameter/crop_right = 0.001
shader_parameter/crop_top = 0.001
shader_parameter/crop_bottom = 0.28

[sub_resource type="Theme" id="Theme_po1cj"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/constants/outline_size = 10
Label/font_sizes/font_size = 38
Label/fonts/font = ExtResource("8_uxrkt")
RichTextLabel/colors/font_outline_color = Color(0, 0, 0, 1)
RichTextLabel/constants/outline_size = 20
RichTextLabel/font_sizes/normal_font_size = 57
RichTextLabel/fonts/normal_font = ExtResource("8_uxrkt")

[sub_resource type="Theme" id="Theme_pjc7b"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/constants/outline_size = 10
Label/font_sizes/font_size = 50
Label/fonts/font = ExtResource("8_uxrkt")
RichTextLabel/colors/font_outline_color = Color(0, 0, 0, 1)
RichTextLabel/constants/outline_size = 20
RichTextLabel/font_sizes/normal_font_size = 40
RichTextLabel/fonts/normal_font = ExtResource("8_uxrkt")

[sub_resource type="Theme" id="Theme_tvu2q"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/constants/outline_size = 10
Label/font_sizes/font_size = 36
Label/fonts/font = ExtResource("8_uxrkt")
RichTextLabel/colors/font_outline_color = Color(0, 0, 0, 1)
RichTextLabel/constants/outline_size = 20
RichTextLabel/font_sizes/normal_font_size = 57
RichTextLabel/fonts/normal_font = ExtResource("8_uxrkt")

[sub_resource type="Theme" id="Theme_f0uba"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/constants/outline_size = 10
Label/font_sizes/font_size = 35
Label/fonts/font = ExtResource("8_uxrkt")
RichTextLabel/colors/font_outline_color = Color(0, 0, 0, 1)
RichTextLabel/constants/outline_size = 20
RichTextLabel/font_sizes/normal_font_size = 57
RichTextLabel/fonts/normal_font = ExtResource("8_uxrkt")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mlvlh"]
size = Vector2(930, 1290)

[node name="card" type="Node2D"]
script = ExtResource("1_e54oh")
metadata/_edit_horizontal_guides_ = [95.0, 640.0]
metadata/_edit_vertical_guides_ = [460.0]

[node name="image" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_qka3k")
centered = false

[node name="bar" type="Node2D" parent="."]

[node name="left" type="Sprite2D" parent="bar"]
texture = ExtResource("5_o1kkw")
centered = false

[node name="icon" type="Sprite2D" parent="bar/left"]
position = Vector2(275, 841.667)
texture = ExtResource("6_efj20")

[node name="stat" type="Label" parent="bar/left"]
offset_left = 191.667
offset_top = 808.333
offset_right = 231.667
offset_bottom = 872.333
theme = ExtResource("6_5svqc")
text = "1"

[node name="leader_stat" type="Label" parent="bar/left"]
offset_left = 144.0
offset_top = 812.0
offset_right = 336.0
offset_bottom = 876.0
theme = SubResource("Theme_po1cj")
text = "Dominance"
horizontal_alignment = 1

[node name="middle" type="Sprite2D" parent="bar"]
texture = ExtResource("6_msicd")
centered = false

[node name="icon" type="Sprite2D" parent="bar/middle"]
position = Vector2(516.667, 841.667)
texture = ExtResource("8_fxf3n")

[node name="stat" type="Label" parent="bar/middle"]
offset_left = 433.0
offset_top = 808.333
offset_right = 473.0
offset_bottom = 872.333
theme = ExtResource("6_5svqc")
text = "1"

[node name="leader_stat" type="Label" parent="bar/middle"]
offset_left = 364.0
offset_top = 812.0
offset_right = 556.0
offset_bottom = 876.0
theme = SubResource("Theme_po1cj")
text = "Dominance"
horizontal_alignment = 1

[node name="right" type="Sprite2D" parent="bar"]
texture = ExtResource("7_megja")
centered = false

[node name="icon" type="Sprite2D" parent="bar/right"]
position = Vector2(716.667, 841.667)
texture = ExtResource("10_d4xvl")

[node name="stat" type="Label" parent="bar/right"]
offset_left = 633.333
offset_top = 808.333
offset_right = 673.333
offset_bottom = 872.333
theme = ExtResource("6_5svqc")
text = "1"

[node name="leader_stat" type="Label" parent="bar/right"]
offset_left = 585.0
offset_top = 812.0
offset_right = 777.0
offset_bottom = 876.0
theme = SubResource("Theme_po1cj")
text = "Dominance"
horizontal_alignment = 1

[node name="card_description_frame" type="Sprite2D" parent="."]
centered = false

[node name="center" type="VBoxContainer" parent="card_description_frame"]
offset_left = 100.0
offset_top = 928.0
offset_right = 820.0
offset_bottom = 1145.0
alignment = 1

[node name="description" type="RichTextLabel" parent="card_description_frame/center"]
layout_mode = 2
theme = SubResource("Theme_pjc7b")
bbcode_enabled = true
text = "[center]qweqweqwwqeqweqweqweqweqweqweqweqweqweqweqweqweqw"
fit_content = true

[node name="detailed_information" type="Sprite2D" parent="card_description_frame"]
centered = false

[node name="region" type="Sprite2D" parent="card_description_frame/detailed_information"]
position = Vector2(89.5, 1194.5)
scale = Vector2(0.17, 0.17)
texture = ExtResource("11_khnek")

[node name="type" type="Sprite2D" parent="card_description_frame/detailed_information"]
position = Vector2(832, 1194.5)
scale = Vector2(0.16, 0.16)
texture = ExtResource("12_3fpi6")

[node name="region_text" type="Label" parent="card_description_frame/detailed_information"]
offset_left = 148.0
offset_top = 1155.0
offset_right = 460.0
offset_bottom = 1219.0
theme = SubResource("Theme_tvu2q")
text = "asdasd"
vertical_alignment = 1

[node name="type_text" type="Label" parent="card_description_frame/detailed_information"]
offset_left = 460.0
offset_top = 1155.0
offset_right = 772.0
offset_bottom = 1219.0
theme = SubResource("Theme_tvu2q")
text = "asdasd"
horizontal_alignment = 2
vertical_alignment = 1

[node name="name" type="Label" parent="."]
offset_top = 718.0
offset_right = 460.0
offset_bottom = 813.0
theme = ExtResource("6_5svqc")
text = "Amelia"
horizontal_alignment = 1
vertical_alignment = 1

[node name="title" type="Label" parent="."]
offset_left = 460.0
offset_top = 718.0
offset_right = 920.0
offset_bottom = 818.0
theme = SubResource("Theme_f0uba")
text = "\"The loyal\""
horizontal_alignment = 1
vertical_alignment = 1

[node name="bar_effect" type="Node2D" parent="."]

[node name="left" type="Sprite2D" parent="bar_effect"]
texture = ExtResource("7_rp7mf")
centered = false

[node name="icon" type="Sprite2D" parent="bar_effect/left"]
position = Vector2(67, 692)
rotation = 1.5708
texture = ExtResource("10_d4xvl")

[node name="stat" type="Label" parent="bar_effect/left"]
offset_left = 100.0
offset_top = 542.0
offset_right = 198.0
offset_bottom = 606.0
rotation = 1.5708
theme = ExtResource("6_5svqc")
text = "-1"
horizontal_alignment = 1

[node name="right" type="Sprite2D" parent="bar_effect"]
texture = ExtResource("8_36o1h")
centered = false

[node name="icon" type="Sprite2D" parent="bar_effect/right"]
position = Vector2(855.667, 591)
rotation = -1.5708
texture = ExtResource("10_d4xvl")

[node name="stat" type="Label" parent="bar_effect/right"]
offset_left = 824.0
offset_top = 742.0
offset_right = 925.0
offset_bottom = 806.0
rotation = -1.5708
theme = ExtResource("6_5svqc")
text = "-1"
horizontal_alignment = 1

[node name="top" type="Sprite2D" parent="bar_effect"]
texture = ExtResource("9_n0uju")
centered = false

[node name="icon" type="Sprite2D" parent="bar_effect/top"]
position = Vector2(411, 66)
rotation = 3.14159
texture = ExtResource("10_d4xvl")

[node name="stat" type="Label" parent="bar_effect/top"]
offset_left = 564.0
offset_top = 97.0
offset_right = 665.0
offset_bottom = 161.0
rotation = 3.14159
theme = ExtResource("6_5svqc")
text = "+1"
horizontal_alignment = 1

[node name="bottom" type="Sprite2D" parent="bar_effect"]
texture = ExtResource("10_8c53s")
centered = false

[node name="icon" type="Sprite2D" parent="bar_effect/bottom"]
position = Vector2(519, 1216)
texture = ExtResource("10_d4xvl")

[node name="stat" type="Label" parent="bar_effect/bottom"]
offset_left = 348.0
offset_top = 1184.0
offset_right = 464.0
offset_bottom = 1248.0
theme = ExtResource("6_5svqc")
text = "+1"
horizontal_alignment = 1

[node name="frame" type="NinePatchRect" parent="."]
offset_right = 920.0
offset_bottom = 1280.0
patch_margin_left = 41
patch_margin_top = 49
patch_margin_right = 41
patch_margin_bottom = 49

[node name="Area2D" type="Area2D" parent="."]
collision_priority = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(455, 635)
shape = SubResource("RectangleShape2D_mlvlh")
debug_color = Color(1, 1, 0, 0.419608)

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
